--- a/public/hub.html
+++ b/public/hub.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Central de Navegação</title>
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-  <link rel="stylesheet" href="css/styles.css?v=1.0.0" />
-  <script src="js/session.js?v=1.0.0" defer></script>
+  <link rel="stylesheet" href="css/styles.css" />
   <script>
+    const tipo = sessionStorage.getItem("tipo");
+    const usuario = sessionStorage.getItem("usuario");
+
+    if (!usuario) location.href = "login.html";
+
     window.addEventListener("DOMContentLoaded", () => {
-      const tipo = sessionStorage.getItem("tipo");
       if (tipo !== "admin") {
         document.querySelectorAll(".admin-only").forEach(el => el.style.display = "none");
       }
-      const usuario = sessionStorage.getItem("usuario");
       document.getElementById("usuario-label").textContent = usuario;
-
-      window.logout = function() {
-        sessionStorage.clear();
-        location.href = "login.html";
-      };
     });
+
+    function logout() {
+      sessionStorage.clear();
+      location.href = "login.html";
+    }
   </script>
 </head>
 <body>
   <h1>Central de Navegação</h1>
-  <p>Usuário: <strong id="usuario-label"></strong></p>
+  <p>Usuário logado: <strong id="usuario-label"></strong></p>
 
   <ul>
     <li><button onclick="location.href='contagem.html'">📦 Contagem Cega</button></li>
