--- a/public/login.html
+++ b/public/login.html
@@ -2,22 +2,20 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Login - Conferência de Estoque</title>
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-  <link rel="stylesheet" href="css/styles.css?v=1.0.0" />
-  <script src="js/session.js?v=1.0.0" defer></script>
+  <title>Login</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <h1>Login</h1>
+
   <form id="login-form">
     <input type="text" id="usuario" placeholder="Usuário" required />
     <input type="password" id="senha" placeholder="Senha" required />
     <button type="submit">Entrar</button>
   </form>
-  <p id="feedback" style="color:red;"></p>
 
-  <script type="module" src="js/auth.js" defer></script>
+  <p id="msg"></p>
+
+  <script type="module" src="js/auth.js"></script>
 </body>
 </html>
