--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Cadastro - Conferência de Estoque</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
