--- a/public/hub.html
+++ b/public/hub.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Central de Navegação</title>
   <link rel="stylesheet" href="css/styles.css" />
   <script>
